Fix quote being covered by image
Happened with landscape on mobile

--- a/index.css
+++ b/index.css
@@ -31,7 +31,7 @@ body {
 #quote {
 	position: absolute;
 	right:0%;
-	bottom: 10%;
+	bottom: 5%;
 	width:40%;
 	/* background-color: orange; */
 }
